Improve code coverage of Generator tests
These tests are fairly simple in that they only check for the correct
return code. The do not check the content of response body. The aim
of the tests is to detect a compilation problem with the Java code
generated from a JSP if the generation process is optimised (eg to
remove a variable declaraton in some cases) incorrectly.

Coverage is as close to 100% as practical for the Generator class